FIXED: Browser view content overflow due to the missing width constraint

--- a/Upnp.Control.Web/ClientApp/src/styles/_browser.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_browser.scss
@@ -1,6 +1,6 @@
 .browser-shell {
     display: grid;
-    grid: "top" auto "main" 1fr "bottom" auto / 1fr;
+    grid: "top" auto "main" 1fr "bottom" auto / 100%;
 }
 
 .br-area-top {
